# engeto_project_1-text_analyzer

./: .gitignore  .pre-commit-config.yaml  .pre-push-config.yaml  Dockerfile  README.md  dev_requirements.txt  main.py  setup.cfg  setup.py
.github/workflows/: check-python-code.yml  ci.yml
data/: text_3.txt  users.json
src/textanalysis/: __main__.py  auth.py  constants.py  main.py  text_analysis.py
src/textanalysis/data/: text_2.txt
src/textanalysis/utils/: __init__.py  text_analysis.py
tests/: test_auth.py  test_text_analysis.py  test_tokenization.py  users.json
utils/: __init__.py  auth.py  text_analysis.py
