[metadata]
name = textanalysis
description = Text analysis
author = Dimitrij KolniÄenko
license = Apache License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    textanalysis
install_requires =
    typing-extensions>=4
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
include_package_data = True

[options.package_data]
* = *.txt, *.json

[options.extras_require]
testing =
    black<25
    mypy<2
    pytest<9
    pytest-cov<6

